--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,15 +8,15 @@ layout: default
 
   {% include about/header.html %}
 
-  <!-- Publication Section -->
+  <!-- Publication Section
   {% if site.publications.size > 0 %}
     {% include about/publications.html %}
-  {% endif %}
+  {% endif %} -->
 
-  <!-- Experience Section -->
+  <!-- Experience Section
   {% if site.experiences.size > 0 %}
     {% include about/experiences.html %}
-  {% endif %}
+  {% endif %} -->
 
   <!-- Projects Section -->
   {% if site.projects.size > 0 %}
