--- a/_includes/navbar/mobile-nav.html
+++ b/_includes/navbar/mobile-nav.html
@@ -1,11 +1,11 @@
 <div class="mobile-nav">
   <div class="mobile-menu-avatar">
     <div class="avatar-container">
-      <img src="{{site.baseurl}}/img/header-avatar.jpeg">
+      <img src="{{site.baseurl}}/img/prateek_avtar2.gif">
     </div>
   </div>
 
-  <p class="mobile-menu-heading">Meow?</p>
+  <p class="mobile-menu-heading">Prateek Raikar</p>
 
   {% include sns-links.html center=true %}
   <ul>
