--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,9 @@
         <!-- SNS Link -->
         <!-- {% include sns-links.html center=true %} -->
         <p class="copyright">
-          &copy; <a href="https://github.com/Renovamen" target="_blank">Renovamen</a> 2018-2020
+          &copy; <a href="https://github.com/Renovamen" target="_blank">Prateek Raikar</a> 2018-2020
           <br>
-          Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/Renovamen/jekyll-theme-gungnir" target="_blank">Gungnir</a>
+<!--           Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/Renovamen/jekyll-theme-gungnir" target="_blank">Gungnir</a> -->
         </p>
       </div>
     </div>
