--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -18,10 +18,10 @@ layout: default
     {% include about/experiences.html %}
   {% endif %} -->
 
-  <!-- Projects Section -->
+  <!-- Projects Section
   {% if site.projects.size > 0 %}
     {% include about/projects.html %}
-  {% endif %}
+  {% endif %} -->
 
   <div class="section">
     <div class="post-container">
