--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,12 +13,12 @@ layout: default
     {% include about/publications.html %}
   {% endif %} -->
 
-  Experience Section
+<!--   Experience Section
   {% if site.experiences.size > 0 %}
     {% include about/experiences.html %}
-  {% endif %}
+  {% endif %} -->
 
-  Projects Section
+<!--   Projects Section -->
   {% if site.projects.size > 0 %}
     {% include about/projects.html %}
   {% endif %}
