--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,10 +19,10 @@ layout: default
   {% endif %} -->
 
 <!--   Projects Section -->
-  {% if site.projects.size > 0 %}
+<!--   {% if site.projects.size > 0 %}
     {% include about/projects.html %}
   {% endif %}
-
+ -->
   <div class="section">
     <div class="post-container">
       {% capture about_other %}{% include about/md/other.md %}{% endcapture %}
