--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -20,7 +20,7 @@ layout: default
 
 <!--   Projects Section -->
   {% if site.projects.size > 0 %}
-    {% include about/projects.html %}
+    {% include about/music.html %}
   {% endif %}
 <!-- 
   <div class="section">
