--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -6,7 +6,7 @@ layout: default
   <!-- the blank is used to replace intro-header -->
   <div class="about-blank"></div>
 
-  {% include about/header.html %}
+  {% include music/header.html %}
 
   <!-- Publication Section
   {% if site.publications.size > 0 %}
