--- a/_includes/music/header.html
+++ b/_includes/music/header.html
@@ -104,7 +104,7 @@
             {% endfor %}
           </ul>
         </div>
-        <div class="col-md-7 education">
+<!--         <div class="col-md-7 education">
             <p class="title">Education</p>
             <ul>
               {% for item in page.education %}
@@ -114,7 +114,7 @@
               </li>
               {% endfor %}
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
