--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -28,6 +28,6 @@ layout: default
       {% capture about_other %}{% include about/md/other.md %}{% endcapture %}
       {{ about_other | markdownify }} -->
   
-    </div>
-  </div>
+<!--     </div> -->
+<!--   </div> -->
 </div>
