--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -8,10 +8,10 @@ layout: default
 
   {% include music/header.html %}
 
-  <!-- Publication Section
+  <!-- Publication Section -->
   {% if site.publications.size > 0 %}
     {% include about/publications.html %}
-  {% endif %} -->
+  {% endif %}
 
 <!--   Experience Section
   {% if site.experiences.size > 0 %}
