--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -19,15 +19,15 @@ layout: default
   {% endif %} -->
 
 <!--   Projects Section -->
-<!--   {% if site.projects.size > 0 %}
-    {% include about/music.html %}
-  {% endif %} -->
+  {% if site.projects.size > 0 %}
+    {% include music/music.html %}
+  {% endif %}
 <!-- 
   <div class="section">
     <div class="post-container">
       {% capture about_other %}{% include about/md/other.md %}{% endcapture %}
       {{ about_other | markdownify }} -->
   
-<!--     </div> -->
-<!--   </div> -->
+    </div> 
+  </div>
 </div>
