--- a/_includes/music/music.html
+++ b/_includes/music/music.html
@@ -1,10 +1,10 @@
-{%- include utils/get-assets-baseurl.html -%}
-{%- assign _assets_baseurl = __return -%}
+<!-- {%- include utils/get-assets-baseurl.html -%}
+{%- assign _assets_baseurl = __return -%} -->
 
-<div class="section projects">
-  <h3 class="about-title">Music Playlists</h3>
+<!-- <div class="section projects">
+  <h3 class="about-title">Music Playlists</h3> -->
 <!--   <h4>See all projects <a href="/projects">here</a>.</h4> -->
-  {% for proj in site.projects %}
+<!--   {% for proj in site.projects %}
   <article class="item">
     {% if proj.img %}
     <a class="item-thumbnail" style="background-image: url({{ _assets_baseurl }}/{{ proj.img }})"></a>
@@ -23,5 +23,5 @@
       </p>
     </div>
   </article>
-  {% endfor %}
-</div>
+  {% endfor %} -->
+<!-- </div> -->
