--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -19,9 +19,9 @@ layout: default
   {% endif %} -->
 
 <!--   Projects Section -->
-  {% if site.projects.size > 0 %}
+<!--   {% if site.projects.size > 0 %}
     {% include music/music.html %}
-  {% endif %}
+  {% endif %} -->
 <!-- 
   <div class="section">
     <div class="post-container">
