--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -9,9 +9,9 @@ layout: default
   {% include music/header.html %}
 
   <!-- Publication Section -->
-  {% if site.publications.size > 0 %}
+<!--   {% if site.publications.size > 0 %}
     {% include about/publications.html %}
-  {% endif %}
+  {% endif %} -->
 
 <!--   Experience Section
   {% if site.experiences.size > 0 %}
