--- a/_includes/music/header.html
+++ b/_includes/music/header.html
@@ -90,7 +90,7 @@
   <div class="about-header-info col-md-8">
     <h3 class="about-title">Biography</h3>
     <div class="biography">
-      {% capture about_bio %}{% include about/md/biography.md %}{% endcapture %}
+      {% capture about_bio %}{% include music/md/bio.md %}{% endcapture %}
       {{ about_bio | markdownify }}
     </div>
 
