--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -164,7 +164,7 @@
   {% if site.hitokoto %}
   <div class="header-bubble">
     <div class="bubble">
-      <p class="bubble-words" id="hitokoto">正在加载一言...</p>
+      <p class="bubble-words" id="hitokoto">TEST</p>
     </div>
     <div class="bubble-tile"></div>
   </div>
