--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -161,14 +161,14 @@
     </a>
   </div>
 
-  {% if site.hitokoto %}
+<!--   {% if site.hitokoto %}
   <div class="header-bubble">
     <div class="bubble">
       <p class="bubble-words" id="hitokoto">TEST</p>
     </div>
     <div class="bubble-tile"></div>
   </div>
-  {% endif %}
+  {% endif %} -->
 
   <!-- Only shows on desktop -->
   <div class="header-info">
@@ -239,9 +239,9 @@
   })
 </script>
 
-{% if site.hitokoto %}
+<!-- {% if site.hitokoto %}
 <!-- Hitokoto API （一言）-->
-<script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
-{% endif %}
+<!-- <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
+{% endif %} --> 
 
 {% endif %}
