--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -23,10 +23,10 @@ layout: default
     {% include about/projects.html %}
   {% endif %}
  -->
-  <div class="section">
+<!--   <div class="section">
     <div class="post-container">
       {% capture about_other %}{% include about/md/other.md %}{% endcapture %}
       {{ about_other | markdownify }}
     </div>
-  </div>
+  </div> -->
 </div>
