--- a/_includes/about/header.html
+++ b/_includes/about/header.html
@@ -104,17 +104,17 @@
             {% endfor %}
           </ul>
         </div>
-        <div class="col-md-7 education">
+<!--         <div class="col-md-7 education">
             <p class="title">Education</p>
             <ul>
               {% for item in page.education %}
               <li>
 <!--                 <p class="edu-degree">{{ item.degree }}, {{ item.year }}</p> -->
-                <p class="edu-school">{{ item.school }}</p>
+<!--                 <p class="edu-school">{{ item.school }}</p>
               </li>
               {% endfor %}
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
