--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,11 @@
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <!-- SNS Link -->
         <!-- {% include sns-links.html center=true %} -->
-        <p class="copyright">
+<!--         <p class="copyright">
           &copy; <a href="https://github.com/seeker316" target="_blank">Prateek Raikar</a> 2018-2020
           <br>
 <!--           Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/Renovamen/jekyll-theme-gungnir" target="_blank">Gungnir</a> -->
-        </p>
+<!--         </p> -->
       </div>
     </div>
   </div>
