--- a/_includes/about/header.html
+++ b/_includes/about/header.html
@@ -88,7 +88,7 @@
   </div>
 
   <div class="about-header-info col-md-8">
-    <h3 class="about-title">Biography</h3>
+    <h3 class="about-title">Me</h3>
     <div class="biography">
       {% capture about_bio %}{% include about/md/biography.md %}{% endcapture %}
       {{ about_bio | markdownify }}
