--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ layout: default
         </ul>
         <hr style="visibility: hidden;">
 
-        {% include poem.html %}
+<!--         {% include poem.html %} -->
 
         {% if site.comment.provider %}
           {% include comments.html %}
