--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,9 +61,9 @@ layout: default
       </div>
 
       <!-- Side Catalog Container -->
-      {% if page.catalog %}
+<!--       {% if page.catalog %}
         {% include catalog.html %}
-      {% endif %}
+      {% endif %} -->
     </div>
   </div>
 </article>
