--- a/_includes/poem.html
+++ b/_includes/poem.html
@@ -6,14 +6,14 @@
     </div>
     <h1>{{site.title}}</h1>
   </div>
-  <span>
+<!--   <span>
     <a href="https://www.jinrishici.com/" target="_blank">
       <i class="fas fa-pencil-alt"></i>
     </a>
     <p id="poem-item">作诗中...</p>
     <br />
     <p id="poem-info"></p>
-  </span>
+  </span> -->
 </section>
 
 <script type="text/javascript">
