--- a/_layouts/inventory.html
+++ b/_layouts/inventory.html
@@ -9,7 +9,7 @@ layout: default
 {%- assign _assets_baseurl = __return -%}
 
 <div class="portfolio container">
-  {% for proj in site."_inventory" %}
+  {% for proj in page.inventory %}
   <article class="item">
     {% if proj.img %}
     <a
