--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
       {{ content }}
 
-<!--       {% include footer.html %} -->
+      {% include footer.html %}
     </div>
 
     <!-- modify styles of navbar on mobile -->
