--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -18,12 +18,12 @@ layout: default
     {% include about/experiences.html %}
   {% endif %} -->
 
-<!--   Projects Section -->
-<!--   {% if site.projects.size > 0 %}
+<!--   Projects Section
+  {% if site.projects.size > 0 %}
     {% include about/projects.html %}
   {% endif %}
- -->
-<!--   <div class="section">
+
+  <div class="section">
     <div class="post-container">
       {% capture about_other %}{% include about/md/other.md %}{% endcapture %}
       {{ about_other | markdownify }}
