--- a/_includes/poem.html
+++ b/_includes/poem.html
@@ -1,11 +1,12 @@
 <!------------ 今日诗词: https://www.jinrishici.com/ ------------>
-<section class="author-profile">
+<!-- <section class="author-profile">
   <div class="info">
     <div class="avatar">
       <img src="{{site.baseurl}}/{{site.avatar}}" />
     </div>
     <h1>{{site.title}}</h1>
   </div>
+-->
 <!--   <span>
     <a href="https://www.jinrishici.com/" target="_blank">
       <i class="fas fa-pencil-alt"></i>
@@ -14,7 +15,7 @@
     <br />
     <p id="poem-info"></p>
   </span> -->
-</section>
+<!-- </section>
 
 <script type="text/javascript">
   // async load function
@@ -54,4 +55,5 @@
       }
     });
   });
-</script>
+</script> 
+ -->
