--- a/_includes/about/header.html
+++ b/_includes/about/header.html
@@ -109,8 +109,8 @@
             <ul>
               {% for item in page.education %}
               <li>
-<!--                 <p class="edu-degree">{{ item.degree }}, {{ item.year }}</p> -->
-<!--                 <p class="edu-school">{{ item.school }}</p>
+               <p class="edu-degree">{{ item.degree }}, {{ item.year }}</p>
+               <p class="edu-school">{{ item.school }}</p>
               </li>
               {% endfor %}
             </ul>
