--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,14 +11,14 @@ layout: default
   <!-- Publication Section
   {% if site.publications.size > 0 %}
     {% include about/publications.html %}
-  {% endif %} -->
+  {% endif %}
 
-<!--   Experience Section
+ Experience Section
   {% if site.experiences.size > 0 %}
     {% include about/experiences.html %}
-  {% endif %} -->
+  {% endif %} 
 
-<!--   Projects Section
+  Projects Section
   {% if site.projects.size > 0 %}
     {% include about/projects.html %}
   {% endif %}
