--- a/_includes/about/experiences.html
+++ b/_includes/about/experiences.html
@@ -24,11 +24,11 @@
         </li>
         {% endfor %}
 
-        <li class="timeline-inverted">
+<!--         <li class="timeline-inverted">
           <div class="timeline-image">
             <img class="img-circle img-responsive" src="{{ _assets_baseurl }}/{{ page.avatar }}">
           </div>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
