--- a/_includes/about/experiences.html
+++ b/_includes/about/experiences.html
@@ -21,10 +21,10 @@
               <p class="job-description">{{ exp.content }}</p>
             </div>
           </div>
-<!--         </li>
+         </li>
         {% endfor %}
 
-        <li class="timeline-inverted">
+        <!-- <li class="timeline-inverted">
           <div class="timeline-image">
             <img class="img-circle img-responsive" src="{{ _assets_baseurl }}/{{ page.avatar }}">
           </div>
