--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- Footer -->
-<!-- <footer>
+<footer>
   <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+<!--     <div class="row"> -->
+<!--       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <!-- SNS Link -->
         <!-- {% include sns-links.html center=true %} -->
 <!--         <p class="copyright">
@@ -10,10 +10,10 @@
           <br>
 <!--           Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/Renovamen/jekyll-theme-gungnir" target="_blank">Gungnir</a> -->
 <!--         </p> -->
-<!--       </div>
-    </div>
+<!--       </div> -->
+  <!--  </div> -->
   </div>
-</footer> -->
+</footer>
 
 <!-- add dark / light mode switcher -->
 {% include mode.html %}
