--- a/_includes/about/projects.html
+++ b/_includes/about/projects.html
@@ -1,7 +1,7 @@
 {%- include utils/get-assets-baseurl.html -%}
 {%- assign _assets_baseurl = __return -%}
 
-<div class="section projects">
+<!-- <div class="section projects">
   <h3 class="about-title">Selected Projects</h3>
   <h4>See all projects <a href="/projects">here</a>.</h4>
   {% for proj in site.projects %}
@@ -25,3 +25,4 @@
   </article>
   {% endfor %}
 </div>
+ -->
