--- a/_includes/about/projects.html
+++ b/_includes/about/projects.html
@@ -1,6 +1,6 @@
-{%- include utils/get-assets-baseurl.html -%}
+<!-- {%- include utils/get-assets-baseurl.html -%}
 {%- assign _assets_baseurl = __return -%}
-
+ -->
 <!-- <div class="section projects">
   <h3 class="about-title">Selected Projects</h3>
   <h4>See all projects <a href="/projects">here</a>.</h4>
