--- a/_includes/about/publications.html
+++ b/_includes/about/publications.html
@@ -1,4 +1,4 @@
-{%- include utils/get-assets-baseurl.html -%}
+<!-- {%- include utils/get-assets-baseurl.html -%}
 {%- assign _assets_baseurl = __return -%}
 
 <div class="section publications">
@@ -16,3 +16,4 @@
   </article>
   {% endfor %}
 </div>
+ -->
