--- a/_includes/about/experiences.html
+++ b/_includes/about/experiences.html
@@ -1,4 +1,4 @@
-{%- include utils/get-assets-baseurl.html -%}
+<!-- {%- include utils/get-assets-baseurl.html -%}
 {%- assign _assets_baseurl = __return -%}
 
 <div class="section work-experience">
@@ -29,11 +29,11 @@
             <img class="img-circle img-responsive" src="{{ _assets_baseurl }}/{{ page.avatar }}">
           </div>
         </li> -->
-      </ul>
+<!--       </ul>
     </div>
   </div>
-</div>
-
+</div> -->
+<!-- 
 <script>
   // 时间轴上浮效果
   window.sr = ScrollReveal();
@@ -44,6 +44,6 @@
   sr.reveal(".timeline-image", {
     duration: 500,
     distance: "80px"
-  });
-</script>
+  }); -->
+</script> -->
 
