--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -26,5 +26,5 @@ layout: default
       {% capture about_other %}{% include about/md/other.md %}{% endcapture %}
       {{ about_other | markdownify }}
     </div> -->
-  </div>
+<!--   </div> -->
 </div>
