--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="about-page">
   <!-- the blank is used to replace intro-header -->
-<!--   <div class="about-blank"></div> -->
+  <!--   <div class="about-blank"></div> -->
 
   {% include about/header.html %}
 <!-- 
@@ -26,5 +26,6 @@ layout: default
       {% capture about_other %}{% include about/md/other.md %}{% endcapture %}
       {{ about_other | markdownify }}
     </div>
-  </div> -->
+  </div> 
+-->
 </div>
